--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
               <h1>🚀 TinHer 🌈</h1>
               <h2>👇 Find your new friend 👀</h2>
             </div>
-            <button class="button">❤️ Refresh ❤️</button> 
+            <button class="button">❤️ Random ❤️</button> 
+            <input type="text" name='search'>
+            <button id="submit">Location</button>
             <hr>
             
             
@@ -54,3 +56,4 @@
 </html>
 
 <!-- lying-invention.surge.sh -->
+<!-- https://randomuser.me/documentation -->
